@@ -1,6 +1,8 @@
 module Nokogiri
   module XML
     class XPath
+      attr_accessor :document
+
     end
   end
 end
